cmake_minimum_required(VERSION 3.21)
project(distributed)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_C_COMPILER "/usr/bin/mpicc")
set(CMAKE_CXX_COMPILER "/usr/bin/mpic++")
include_directories(/home/ivan/Desktop/mpich-3.4.2)
include_directories(/usr/include/mpi)
add_executable(distributed blocking.cpp nonblocking.cpp)
cmake_minimum_required(VERSION 3.6)
